tinyc/test/good/fun-return-from-void.c
void v()
{
    return 1;
}

int main()
{
    v();
    return 0;
}
