tinyc/test/bad/void-as-bool-ternary.c
void v() {}

int main()
{
    v() ? 0 : 1;
    return 0;
}
